src/plugins/platforms/windows/qwindowscontext.h
@@ -180,6 +180,7 @@ public:
 
     int defaultDPI() const;
 
+    static QString classNamePrefix();
     QString registerWindowClass(const QWindow *w);
     QString registerWindowClass(QString cname, WNDPROC proc,
                                 unsigned style = 0, HBRUSH brush = nullptr,
